welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: value unary_! is not a member of Unit
  } while(!(x=7))
          ^